# meson_python_fortran_C

./: README.md  meson.build  pyproject.toml
example/: example.py
my_module/src/: bar.f90  meson.build  our_first_module.c
